--- a/style.css
+++ b/style.css
@@ -153,6 +153,8 @@ body {
   font-family: "Poppins", sans-serif;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 264px;
 }
 
 .info-description {
@@ -180,14 +182,6 @@ body {
   line-height: 30px;
   color: #6c6c6c;
   max-width: 443px;
-}
-
-.info-img {
-  margin-bottom: 264px;
-}
-
-.info-margin {
-  margin-bottom: 309px;
 }
 
 .contact {
